istio/new/yaml/7-mTLS/6-istio-gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fleetman-gateway
  namespace: default
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
  type: ClusterIP

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fleetman-webapp-routing
  namespace: default
spec:
  parentRefs:
    - name: fleetman-gateway
  hostnames:
    - "*"
  rules:
    - backendRefs:
        - name: fleetman-webapp
          port: 80
