istio/new/yaml/7-mTLS/7-circuit-breaking.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: circuit-breaker-for-the-entire-default-namespace
spec:
  host: "*.default.svc.cluster.local"          # This is the name of the k8s service that we're configuring

  trafficPolicy:
    outlierDetection: # Circuit Breakers HAVE TO BE SWITCHED ON
      maxEjectionPercent: 100
      consecutiveErrors: 1
      interval: 5s

#Outlier Detection(이상 수치 탐지) 기능을 사용하여 특정 서비스의 인스턴스(Pod)가 고장 났을 때 자동으로 트래픽에서 격리시키는 설정
# outlierDetection: 서킷 브레이커의 핵심 로직입니다.

# consecutiveErrors: 1: 단 1번의 에러만 발생해도 해당 Pod을 불량으로 간주합니다. (실제 환경에서는 너무 민감할 수 있습니다.)

# interval: 5s: 5초마다 에러가 발생했는지 체크합니다.

# maxEjectionPercent: 100: 문제가 생기면 가용 가능한 Pod 중 최대 100%까지 트래픽에서 제외할 수 있습니다. 즉, 모든 Pod이 에러를 내면 모든 Pod이 격리되어 서비스가 중단될 수 있습니다.
